Add the startup-overhead bench

--- a/pt2pt/Makefile
+++ b/pt2pt/Makefile
@@ -1,4 +1,4 @@
-install: c-latency c-bandwidth go-latency go-bandwidth
+install: c-latency c-bandwidth c-startup go-latency go-bandwidth go-startup
 
 c-latency:
 	cd C && mpicc latency.c bench_util.c -o c-latency
@@ -6,15 +6,21 @@ c-latency:
 c-bandwidth:
 	cd C && mpicc bandwidth.c bench_util.c -o c-bandwidth
 
+c-startup:
+	cd C && mpicc startup.c bench_util.c -o c-startup
+
 go-latency: Go-MPI
 	cd Go && go build -o go-latency latency.go bench_util.go
 
 go-bandwidth:
 	cd Go && go build -o go-bandwidth bandwidth.go bench_util.go
 
+go-startup:
+	cd Go && go build -o go-startup startup.go bench_util.go
+
 Go-MPI:
 	go install go-mpi/MPI
 
 clean:
-	cd C && rm c-latency c-bandwidth
-	cd Go && rm go-latency go-bandwidth
+	cd C && rm c-latency c-bandwidth c-startup
+	cd Go && rm go-latency go-bandwidth go-startup
